[package]
name = "dug"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
documentation = "https://docs.rs/crate/dug"
homepage = "https://github.com/penryu/dug"
repository = "https://github.com/penryu/dug"

[dependencies]
anyhow = "*"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.14.0"
tokio = { version = "1", features = ["macros", "process", "rt"] }
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
