[package]
name = "dug"
description = "An exhaustive name resolution aggregator"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
documentation = "https://docs.rs/crate/dug"
homepage = "https://github.com/penryu/dug"
repository = "https://github.com/penryu/dug"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tabled = "0.14"
tokio = { version = "1", features = ["macros", "process", "rt"] }
trust-dns-resolver = { version = "0.23", features = ["dns-over-rustls"] }
